[project]
name = "saturn-mousehunter-proxy-pool"
version = "0.1.0"
description = "Saturn MouseHunter Proxy Pool Rotation Service"
readme = "README.md"
authors = [
    { name = "cenwei", email = "cenwei@msn.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "orjson>=3.9.0",
    "saturn-mousehunter-shared>=0.1.0",
    "asyncio>=3.4.3",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
saturn-mousehunter-proxy-pool = "main:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true